--- a/app/elements/slot-list/slot-list.html
+++ b/app/elements/slot-list/slot-list.html
@@ -9,8 +9,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <link rel="import" href="..\..\bower_components/polymer/polymer.html">
-<script src="../../../bower_components/moment/moment.js"></script>
-<script src="../../bower_components/moment-recur/moment-recur.js"></script>
 
 <dom-module id="slot-list">
   <style>
@@ -54,7 +52,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 
           <paper-button on-click="expandSlots">
-            <iron-icon icon="{{icon}}"></iron-icon>
+            <iron-icon id="{{computeID1(list.date)}}" icon="{{icon}}"></iron-icon>
 
           </paper-button>
           <h4>{{list.date}}</h4>
@@ -73,7 +71,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                   </div>
 
                   <div hidden="{{slot.availability}}">
-                    <b class="red">Not available</b>
+                    <span class="red">Not available</span>
 
                   </div>
 
@@ -170,11 +168,22 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           document.querySelector('#test').toggle();
         },
         getID: function(date) {
-          var id = date.substring(0, 3).toLowerCase() + date.substring(5, 7).toLowerCase() + date.substring(8, 11).toLowerCase() + date.substring(12, date.length);
+          var doc = this.clickedDocent.get("firstName").toLowerCase();
+          var id = date.substring(0, 3).toLowerCase() + date.substring(5, 7).toLowerCase() + date.substring(8, 11).toLowerCase()
+           + date.substring(12, date.length) + doc;
           // console.log(id);
           return id;
         },
+        computeID1: function(date) {
+            var doc = this.clickedDocent.get("firstName").toLowerCase();
+            var id = date.substring(0, 3).toLowerCase() + date.substring(5, 7).toLowerCase() + date.substring(8, 11).toLowerCase()
+             + date.substring(12, date.length) + doc + "icon";
+          return id;
+        },
         clickedDocentChanged: function(oldValue, newValue) {
+
+
+
           var self = this;
               self.loading = !self.loading;
           Parse.Cloud.run('singleDocent', {
@@ -201,6 +210,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                         "August", "September", "October", "November", "December"
                       ]
                     }).format("ddd, DD MMM YYYY");
+                    item["d"] = moment(date).locale('en', {
+                      months: [
+                        "January", "February", "March", "April", "May", "June", "July",
+                        "August", "September", "October", "November", "December"
+                      ]
+                    }).format("DD MMM YYYY");
                     item["dateObject"] = date;
                     item["slots"] = slots;
                     item["slots"].date = date;
@@ -214,6 +229,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                   //   item["empty"] = "This Docent is currently not available";
                   //       List.push(item);
                   // }
+                  objSort(List,"d");
                   self.dateList = List;
                   self.loading = !self.loading;
 
@@ -235,14 +251,44 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           var retrievedDocentId;
           var fixedDate;
           var queryDate;
+          moment.tz.add("Europe/Berlin|CET CEST CEMT|-10 -20 -30|01010101010101210101210101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010|-2aFe0 11d0 1iO0 11A0 1o00 11A0 Qrc0 6i00 WM0 1fA0 1cM0 1cM0 1cM0 kL0 Nc0 m10 WM0 1ao0 1cp0 dX0 jz0 Dd0 1io0 17c0 1fA0 1a00 1ehA0 1a00 1cM0 1cM0 1cM0 1cM0 1cM0 1cM0 1cM0 1fA0 1cM0 1cM0 1cM0 1cM0 1cM0 1cM0 1cM0 1cM0 1cM0 1cM0 1cM0 1fA0 1cM0 1cM0 1cM0 1cM0 1cM0 1cM0 1cM0 1cM0 1cM0 1cM0 1fA0 1o00 11A0 1o00 11A0 1o00 11A0 1qM0 WM0 1qM0 WM0 1qM0 11A0 1o00 11A0 1o00 11A0 1qM0 WM0 1qM0 WM0 1qM0 WM0 1qM0 11A0 1o00 11A0 1o00 11A0 1qM0 WM0 1qM0 WM0 1qM0 11A0 1o00 11A0 1o00 11A0 1o00 11A0 1qM0 WM0 1qM0 WM0 1qM0 11A0 1o00 11A0 1o00 11A0 1qM0 WM0 1qM0 WM0 1qM0 11A0 1o00 11A0 1o00 11A0 1o00 11A0 1qM0 WM0 1qM0 WM0 1qM0 11A0 1o00 11A0 1o00 11A0 1qM0 WM0 1qM0 WM0 1qM0 WM0 1qM0 11A0 1o00 11A0 1o00");
+          moment.tz.setDefault("Europe/Berlin");
         },
         expandSlots: function(e) {
           var model = e.model;
           var date = model.get("list.date");
-          var theID = date.substring(0, 3).toLowerCase() + date.substring(5, 7).toLowerCase() + date.substring(8, 11).toLowerCase() + date.substring(12, date.length);
-          theID = "#" + theID;
-          // console.log(this.querySelector(theID));
-          this.querySelector(theID).toggle();
+          var doc = this.clickedDocent.get("firstName").toLowerCase();
+          var theID = date.substring(0, 3).toLowerCase() + date.substring(5, 7).toLowerCase() + date.substring(8, 11).toLowerCase() + date.substring(12, date.length) + doc;
+          // theID = "#" + theID;
+
+
+          if (this.querySelector(".iron-collapse-opened") != null) {
+            var found = Polymer.dom(this.root).querySelector(".iron-collapse-opened");
+            var foundID = $(found).attr('id');
+
+            if (foundID != theID) {
+              Polymer.dom(this.root).querySelector(".iron-collapse-opened").toggle();
+              var ico = Polymer.dom(this.root).querySelector('#' + foundID + "icon");
+              console.log("ico",ico);
+              if (ico != undefined) {
+                ico.setAttribute("icon", "expand-more");
+              }
+            }
+            this.querySelector('#' + theID).toggle();
+
+          } else {
+            console.log(theID);
+            this.querySelector('#' + theID).toggle();
+          }
+          var iconstatus = this.querySelector('#' + theID + "icon");
+          iconstatus = iconstatus.getAttribute("icon");
+          if (iconstatus === "expand-less") {
+            console.log("less");
+            this.querySelector('#' + theID + "icon").setAttribute("icon", "expand-more");
+          } else {
+            console.log("more");
+            this.querySelector('#' + theID + "icon").setAttribute("icon", "expand-less");
+          }
         },
         dateClicked: function(e) {
 
@@ -262,7 +308,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           // fixedDate = new moment(new Date(model.get("list.date")));
           this.date = model.get("list.dateObject");
           queryDate = this.date;
-          console.log("querydate",queryDate);
+          console.log("querydate");
           this.date = moment(this.date).locale('en', {
             months: [
               "January", "February", "March", "April", "May", "June", "July",
