--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <script src="http://www.parsecdn.com/js/parse-1.5.0.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="scripts/parse-initialize.js"></script>
+  <script src="../../../bower_components/moment/moment.js"></script>
+  <script src="../../bower_components/moment-recur/moment-recur.js"></script>
+  <script src="../../bower_components/moment-timezone/moment-timezone.js"></script>
   <!-- build:js bower_components/webcomponentsjs/webcomponents-lite.min.js -->
   <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <!-- endbuild -->
