--- a/app/elements/create-docent/create-docent.html
+++ b/app/elements/create-docent/create-docent.html
@@ -97,59 +97,62 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 					</div>
 
 					<div secondary>{{computeSubjects(subject1,subject2,subject3)}}</div>
+					<!-- <div secondary><span>{{subject1}}</span><span>{{subject2}}</span><span>{{subject3}}</span></div> -->
 				</paper-item-body>
 			</paper-item>
 			<div class="spacer"></div>
-			<paper-item>
-				<paper-item-body three-line class="paper-item-body-0">
+			<div id="inputs">
+				<paper-item>
+					<paper-item-body three-line class="paper-item-body-0">
 
-					<paper-input-container>
-						<label>First Name</label>
-						<input is="iron-input" name="firstName" type="text" value="{{firstName::input}}" required>
-					</paper-input-container>
+						<paper-input-container>
+							<label>First Name</label>
+							<input is="iron-input" name="firstName" type="text" value="{{firstName::input}}" required>
+						</paper-input-container>
 
-					<paper-input-container>
-						<label>Last Name</label>
-						<input is="iron-input" name="lastName" type="text" value="{{lastName::input}}" required>
-					</paper-input-container>
-
-
-
-				</paper-item-body>
-			</paper-item>
-
-			<paper-item>
-				<paper-item-body three-line class="paper-item-body-0">
-
-					<paper-input-container>
-						<label>Subject 1</label>
-						<input is="iron-input" name="subject1" type="text" required value="{{subject1::input}}">
-					</paper-input-container>
-
-					<paper-input-container>
-						<label>Subject 2</label>
-						<input is="iron-input" name="subject2" type="text" value="{{subject2::input}}">
-					</paper-input-container>
+						<paper-input-container>
+							<label>Last Name</label>
+							<input is="iron-input" name="lastName" type="text" value="{{lastName::input}}" required>
+						</paper-input-container>
 
 
-					<paper-input-container>
-						<label>Subject 3</label>
-						<input is="iron-input" name="subject3" type="text" value="{{subject3::input}}">
-					</paper-input-container>
+
+					</paper-item-body>
+				</paper-item>
+
+				<paper-item>
+					<paper-item-body three-line class="paper-item-body-0">
+
+						<paper-input-container>
+							<label>Subject 1</label>
+							<input is="iron-input" name="subject1" type="text" required value="{{subject1::input}}">
+						</paper-input-container>
+
+						<paper-input-container>
+							<label>Subject 2</label>
+							<input is="iron-input" name="subject2" type="text" value="{{subject2::input}}">
+						</paper-input-container>
 
 
-					<paper-input-container>
-						<label>Password</label>
-						<input is="iron-input" name="password" type="password" required>
-					</paper-input-container>
+						<paper-input-container>
+							<label>Subject 3</label>
+							<input is="iron-input" name="subject3" type="text" value="{{subject3::input}}">
+						</paper-input-container>
 
-					<paper-input-container>
-						<label>E-Mail</label>
-						<input is="iron-input" name="Email" type="Email">
-					</paper-input-container>
 
-				</paper-item-body>
-			</paper-item>
+						<paper-input-container>
+							<label>Password</label>
+							<input is="iron-input" name="password" type="password" required>
+						</paper-input-container>
+
+						<paper-input-container>
+							<label>E-Mail</label>
+							<input is="iron-input" name="Email" type="Email">
+						</paper-input-container>
+
+					</paper-item-body>
+				</paper-item>
+			</div>
 			<div id="button-create">
 				<paper-button class="submitButton" autovalidate center-center raised on-click="handleClick">Create</paper-button>
 			</div>
@@ -165,24 +168,29 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 			properties: {
 				firstName: {
 					type: String,
-					value: ''
+					value: '',
+					notify: true
 				},
 				lastName: {
 					type: String,
-					value: ''
+					value: '',
+					notify: true
 				},
 
 				subject1: {
 					type: String,
-					value: ''
+					value: '',
+					notify: true
 				},
 				subject2: {
 					type: String,
-					value: ''
+					value: '',
+					notify: true
 				},
 				subject3: {
 					type: String,
-					value: ''
+					value: '',
+					notify: true
 				}
 			},
 			computeFullName: function(firstName, lastName) {
@@ -190,7 +198,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 			},
 			computeSubjects: function(subject1, subject2, subject3) {
 
-				return subject1 + ' ' + subject2 + ' ' + subject3;
+
+				return subject1 + ', ' + subject2 + ', ' + subject3;
 			},
 			handleClick: function() {
 				var
@@ -202,6 +211,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 					subject1 = $('[name="subject1"]').val(),
 					subject2 = $('[name="subject2"]').val(),
 					subject3 = $('[name="subject3"]').val();
+
 
 				if (
 					Email === '' ||
@@ -236,10 +246,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 							var inputs, index;
 
-							inputs = document.getElementsByTagName('input');
-							for (index = 0; index < inputs.length; ++index) {
-								inputs[index].val = '';
-							}
+							$('[name="Email"]').val('');
+							$('[name="password"]').val('');
+							$('[name="firstName"]').val('');
+							$('[name="lastName"]').val('');
+
+							$('[name="subject1"]').val('');
+							$('[name="subject2"]').val('');
+							$('[name="subject3"]').val('');
+							this.firstName = '';
+							this.lastName = '';
+							this.subject1 = '';
+							this.subject2 = '';
+							this.subject3 = '';
+
 							var query = new Parse.Query(Parse.User);
 							query.equalTo("email", Email);
 							query.include("Docent");
@@ -288,4 +308,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 			}
 		});
 	})();
-// </script>
+	//
+</script>
