--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -59,7 +59,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
-<link rel="import" href="../bower_components/polymer-themes/technology.html">
+<link rel="import" href="../bower_components/polymer-themes/ice.html">
 <link rel="import" href="signup-element/signup-element.html">
 <link rel="import" href="login-element/login-element.html">
 <link rel="import" href="user-element/user-element.html">
@@ -78,3 +78,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="loading-placeholder/loading-placeholder.html">
 <link rel="import" href="slot-list/slot-list.html">
 <link rel="import" href="warning-dialog/warning-dialog.html">
+<link rel="import" href="appointment-list-docent/appointment-list-docent.html">
