--- a/app/elements/docent-list/docent-list.html
+++ b/app/elements/docent-list/docent-list.html
@@ -62,6 +62,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             </div>
           </paper-item-body>
           <paper-button flat on-click="roomButtonClick">Room</paper-button>
+            <iron-icon icon="highlight-off" on-tap="docentDel"></iron-icon>
           </paper-icon-item>
 
 
@@ -103,6 +104,26 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     </paper-dialog>
 
+    <paper-dialog id="delDocentDialog" modal>
+
+      <paper-header-panel>
+        <paper-toolbar>
+          <div>
+            <h2>Please confirm</h2>
+          </div>
+        </paper-toolbar>
+      </paper-header-panel>
+
+
+      <p>Delete the Docent <b><span>{{docentName}}</span></b> ?</br>  Be Sure you will loose all timeslots and appointments</p>
+
+
+      <div class="buttons">
+        <paper-button flat dialog-dismiss>Cancel</paper-button>
+        <paper-button flat dialog-confirm on-click="confirmDocentDel">Confirm</paper-button>
+      </div>
+    </paper-dialog>
+
   </template>
   <script>
     (function() {
@@ -111,6 +132,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         properties: {
           docentList: {
             type: Array
+          },
+        docentName: {
+            type: String,
+            value: "Default"
           }
         },
         observers: [
@@ -128,7 +153,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         ready: function() {
           var self = this;
-          var clickedDocentEmail, clickedDocentRoom, docent;
+          var clickedDocentEmail, clickedDocentRoom, docent, clickedDelDocent, clickedDelDocent2;
 
           // Fetch all Docents
           var DocentQuery = Parse.Object.extend("Docent");
@@ -164,6 +189,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         roomButtonClick: function(e) {
           docent = e.model;
           clickedDocentEmail = docent.get("item.email");
+          //clickedDocent = docent.get("item.email");
           clickedDocentRoom = docent.get("item.room");
           clickedDocent = docent.get("item.docent");
 
@@ -192,6 +218,93 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             self.roomList = List;
           });
           this.$.roomDialog.toggle();
+        },
+        docentDel: function(e){
+          var model = e.model;
+          clickedDelDocent = model.get("item.firstName");
+          clickedDelDocent2 = model.get("item.lastName");
+          this.docentName = clickedDelDocent + " " + clickedDelDocent2;
+          this.$.delDocentDialog.toggle();
+
+        },
+
+        confirmDocentDel: function(e){
+          var model = e.model;
+          var clickedDocent = clickedDelDocent + clickedDelDocent2;
+
+          for ( i in this.docentList){
+
+            if(this.docentList[i].firstName+this.docentList[i].lastName === clickedDocent){
+
+
+              //delete Slots
+              var slots = Parse.Object.extend("Slots");
+              var slotsQuery = new Parse.Query(slots);
+              slotsQuery.include("Docent");
+              slotsQuery.equalTo("Docent",this.docentList[i].docent);
+              slotsQuery.find().then(function(results) {
+                for(i in results){
+
+                  console.log("SlotDocents",results[i]);
+                  results[i].destroy();      //destroys the rows with Docent in "slots"
+                }
+
+              });
+
+              //delete Pointer from Room
+              var room = Parse.Object.extend("Room");
+              var roomQuery = new Parse.Query(room);
+              roomQuery.include("Docent");
+              roomQuery.equalTo("Docent",this.docentList[i].docent);
+              roomQuery.first({
+                success: function(object){
+                object.set("Docent", null);
+                object.save();
+                }
+              });
+
+              var appointment = Parse.Object.extend("Appointment");
+              var appointmentQuery = new Parse.Query(appointment);
+              appointmentQuery.include("docent");
+              appointmentQuery.equalTo("docent",this.docentList[i].docent);
+              appointmentQuery.find().then(function(results) {
+                for(i in results){
+
+                  console.log("AppointmentDocents",results[i]);
+                  results[i].destroy();      //destroys the rows with Docent in "Appointment"
+                }
+
+              });
+
+              var user = Parse.Object.extend("User");
+              var userQuery = new Parse.Query(user);
+              userQuery.equalTo("email",this.docentList[i].email);
+              userQuery.first({
+                success: function(object){
+                  object.destroy();   //destroys the row with Docent in "User"
+                  console.log("docent in user",object);
+                }
+              });
+
+              var docent = Parse.Object.extend("Docent");
+              var docentQuery = new Parse.Query(docent);
+              docentQuery.equalTo("email",this.docentList[i].email);
+              docentQuery.first({
+                success: function(object){
+                  object.destroy();   //destroys the row with Docent in "User"
+                  console.log("docent in docent",object);
+                }
+              });
+
+
+              this.splice('docentList',i, 1);
+            }
+          }
+
+
+
+
+
         },
         roomClick: function(e) {
           var model = e.model;
